--- a/000-main.tex
+++ b/000-main.tex
@@ -26,6 +26,8 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 
+\usepackage{cancel}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % METADATA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -70,6 +72,8 @@
 
     \include{2022-09-12}
     \include{2022-09-23}
+    \include{2022-09-30}
+    \include{2022-10-02}
 
     \nocite{*}
 
