--- a/2022-09-23.tex
+++ b/2022-09-23.tex
@@ -1,6 +1,6 @@
 \section{A glimpse into Bayesian methods (for supervised ML)}
 
-We have a data sample \(D = \{ x^i, y^i\} i = 1, \dots, n\)
+We have a data sample \(D = \{ x^i, y^i\}\quad i = 1, \dots, n\)
 where \(x \in \mathcal{X} = \mathds{R}^d, y^i \in \mathcal{Y}\)
 We consider a hypothesis space
 \(\mathcal{F} := \{ f_\theta (x), \theta \in \Theta \subset \mathds{R}^d \}\).
@@ -38,30 +38,27 @@ The Bayesian machinery makes use of the Bayes formula.
 
 	      \begin{enumerate}
 		      \item
-		            Decide the \uline{functional form of the models} \(f_\theta (x)\)
+		            Decide the \emph{functional form of the models} \(f_\theta (x)\)
 		      \item
-		            Choose the \uline{prior} \(P(\theta)\) about the parameters
+		            Choose the \emph{prior} \(P(\theta)\) about the parameters
 	      \end{enumerate}
 	\item
-	      Calculate the \uline{likelihood function} \(P(y | x, \theta)\) (The
+	      Calculate the \emph{likelihood function} \(P(y | x, \theta)\) (The
 	      probability of getting the data \(D\) for a specific value of
 	      \(\theta\))
 	\item
-	      Calculate the \uline{posterior distribution} of \(\theta\)
-\end{enumerate}
+	      Calculate the \emph{posterior distribution} of \(\theta\)
 
-\[
-	P(\theta | D) = \frac{P(\theta) \prod_{i=1}^n}{P(y^i|x^i, \theta)
-		{\int_\Theta d\theta' P(\theta')\prod_{i=1}^n} P(y^i|x^i, \theta')}
-\]
+	      \[
+		      P(\theta | D) = \frac{P(\theta) \prod_{i=1}^n}{P(y^i|x^i, \theta)
+			      {\int_\Theta d\theta' P(\theta')\prod_{i=1}^n} P(y^i|x^i, \theta')}
+	      \]
 
-\begin{enumerate}
 	\item
 	      Decide a method for making predictions (when new data \(x^0\) comes):
 
 	      \begin{enumerate}
-		      \item
-		            Eliminate the prior \(P(\theta)\) -\textgreater{}
+		      \item Eliminate the prior \(P(\theta)\) \textrightarrow{}
 		            \(P(\theta | D) \propto \mathcal{L}(\sigma ; D) \cdot P(\theta)\)
 
 		            \begin{enumerate}
@@ -70,7 +67,7 @@ The Bayesian machinery makes use of the Bayes formula.
 			            \item
 			                  You then find a set of parameters \(\theta\) that maximizes the
 			                  likelihood function
-			                  \(\hat{\theta_{ML}} argmax_{\theta \in \Theta} \mathcal{L}(\sigma ; D)\)
+			                  \(\hat{\theta}_{ML} = \argmax_{\theta \in \Theta} \mathcal{L}(\sigma ; D)\)
 		            \end{enumerate}
 		      \item
 		            Half Bayesian
@@ -78,38 +75,31 @@ The Bayesian machinery makes use of the Bayes formula.
 
 		            \begin{enumerate}
 			            \item
-			                  \(\hat{\theta_{MAP}} argmax_{\theta \in \Theta} \mathcal{L}(\sigma ; D) \cdot P(\theta)\)
+			                  \(\hat{\theta}_{MAP} = \argmax_{\theta \in \Theta} \mathcal{L}(\sigma ; D) \cdot P(\theta)\)
 			                  (Maximum a posteriori)
 			            \item
 			                  Since we have a multiplication to minimize, we use logarithms.
 			            \item
 			                  It is then:
-			                  \(\hat{\theta_{MAP}} argmax_{\theta \in \Theta} \log \mathcal{L}(\sigma ; D) + \log P(\theta)\)
+			                  \(\hat{\theta}_{MAP} = \argmax_{\theta \in \Theta} \log \mathcal{L}(\sigma ; D) + \log P(\theta)\)
 		            \end{enumerate}
 		      \item
-		            Calculate the \uline{average of the posteriors} \(P(\theta | D)\)
-		            instead of the maximum. (average -\textgreater{} expected value)
+		            Calculate the \emph{average of the posteriors} \(P(\theta | D)\)
+                instead of the maximum. (average \textrightarrow{} expected value)
 
 		            \begin{enumerate}
-			            \item
-			                  \(\hat{\theta_{avg}} = \int_\Theta \theta P(\theta | D) d\theta\)
-			            \item
-			                  In practice, this integral is intractable, we have to use
+			            \item \(\hat{\theta}_{avg} = \int_\Theta \theta P(\theta | D) \; d\theta\)
+			            \item In practice, this integral is intractable, we have to use
 			                  numerical integration. Which is quite delicate.
 		            \end{enumerate}
-		      \item
-		            Fully Bayesian: you have to work with the full posterior
-
+		      \item Fully Bayesian: you have to work with the full posterior.
 		            \begin{enumerate}
-			            \item
-			                  You don't return any model. You return a distribution over models.
-			            \item
-			                  Since we have a distribution, we can compute confidence integrals
+			            \item You don't return any model. You return a distribution over models.
+			            \item Since we have a distribution, we can compute confidence integrals
 			                  (bayesian confidence intervals) (not in the scope of the course)
-			            \item
-			                  Suppose that a new data point comes, \(x^0\):
+			            \item Suppose that a new data point comes, \(x^0\):
 
-			                  \[P(y^0 | x^0, D) = \int_\Theta P(y^0 | x^0, \theta) P(\theta | D) d\theta
+			                  \[P(y^0 | x^0, D) = \int_\Theta P(y^0 | x^0, \theta) P(\theta | D)\; d\theta
 			                  \]
 
 			                  In the first 2 cases, we obtain a single unique model.In all
@@ -122,61 +112,66 @@ The Bayesian machinery makes use of the Bayes formula.
 
 We depart from a data sample and face a regression task.
 
-So \(x^i \in \mathds{R}^d, y^i \in \mathds{R}\) and we want to perform
-\uline{linear regression}.
+So \(x^i \in \mathds{R}^d,\; y^i \in \mathds{R}\) and we want to perform
+\emph{linear regression}.
 
-By convention \(\underbar{\omega} := (\omega, \omega_0)\)
+\begin{equation*}
+	\mathcal{F}_{\text{linr}} := \bigl\{
+	x \mapsto f_\omega(x) = \omega^T x + \omega_0 ,\quad
+	\omega \in \mathds{R}^d, \quad
+	\omega_0 \in \mathds{R}
+	\bigr\}
+\end{equation*}
+
+By convention \(\underbar{\omega} := (\omega,\, \omega_0)\)
 
 \begin{itemize}
-	\item
-	      What loss function do we use?
-	\item
-	      What king of regularizer (penalty on model complexity) should I
+	\item What loss function do we use?
+	\item What kind of regularizer (penalty on model complexity) should I
 	      use?
 \end{itemize}
+
+\begin{align*}
+  y &= f_\omega(x) + \varepsilon \\
+  \mathds{E}[\varepsilon] &= 0 \\
+  \text{Var}(\varepsilon) &= \sigma^2 < \infty \\
+  \text{Independence between }& x \text{ and }\varepsilon
+\end{align*}
 
 \paragraph{Procedure}
 
 \begin{enumerate}
-	\item
-	      For an arbitrary input \(x \in \mathds{R}^d\), we want to predict
+	\item For an arbitrary input \(x \in \mathds{R}^d\), we want to predict
 	      \(y \in \mathds{R}\)
-\end{enumerate}
+	      \begin{align*}
+		      \epsilon                      & \sim \mathcal{N}(0, \sigma^2)                                       \\
+		      P(y | x,\, \underbar{\omega})   & = \mathcal{N}(y | f_{\underbar{\omega}}(x),\, \sigma^2)               \\
+		      \beta                         & = \frac{1}{\sigma^2} \text{ (precision)}                            \\
+		      P(\underbar{\omega})          & = \mathcal{N}(\underbar{\omega} ;\, 0 ,\, \Sigma)                       \\
+		      \Sigma                        & := \text{ covariance matrix (Not viable in practice, we use other)} \\
+		      P(\underbar{\omega} | \alpha) & = \mathcal{N}(\underbar{\omega} ;\, 0 ,\,\sigma_{\omega}^2 I))         \\
+		      \alpha                        & := \frac{1}{\sigma_{\omega}^2}
+	      \end{align*}
 
-\begin{align*}
-	\epsilon                      & \sim \mathcal{N}(0, \sigma^2)                                       \\
-	P(y | x, \underbar{\omega})   & = \mathcal{N}(y | f_{\underbar{\omega}}(x), \sigma^2)               \\
-	\beta                         & = \frac{1}{\sigma^2} \text{ (precision)}                            \\
-	P(\underbar{\omega})          & = \mathcal{N}(\underbar{\omega} ; 0 , \Sigma)                       \\
-	\Sigma                        & := \text{ covariance matrix (Not viable in practice, we use other)} \\
-	P(\underbar{\omega} | \alpha) & = \mathcal{N}(\underbar{\omega} ; 0 , \sigma_{\omega}^2 I))         \\
-	\alpha                        & := \frac{1}{\sigma_{\omega}^2}
-\end{align*}
+	      A parameter that controls other parameters is called a
+	      \emph{hyperparameter}. In this case, \(\sigma_\omega\) is an
+	      hyperparameter.
 
-A parameter that controls other parameters is called a
-\uline{hyperparameter}. In this case, \(\sigma_\omega\) is an
-hyperparameter.
+	\item \emph{The likelihood function}
 
-\begin{enumerate}
-	\item
-	      \uline{The likelihood function}
-\end{enumerate}
+	      \[
+		      \mathcal{L}(\underbar{\omega} ; \beta) = \prod_{i=1}^n P(y^i | x^i, \underbar{\omega}) =
+		      \prod_{i=1}^n \mathcal{N}(y^i | f_{\underbar{\omega}}(x^i), \sigma^2)
+	      \]
 
-\[
-	\mathcal{L}(\underbar{\omega} ; \beta) = \prod_{i=1}^n P(y^i | x^i, \underbar{\omega}) =
-	\prod_{i=1}^n \mathcal{N}(y^i | f_{\underbar{\omega}}(x^i), \sigma^2)
-\]
-
-\begin{enumerate}
-	\item
-	      \uline{The posterior distribution}
+	\item \emph{The posterior distribution}
 \end{enumerate}
 
 \[P(\underbar{\omega} | y, X, \alpha, \beta) = \frac{\mathcal{L}(\underbar{\omega}; \beta) P(\underbar{\omega} | \alpha)}
 	{\int_{\mathds{R}} \mathcal{L}(\underbar{\omega}; \beta) P(\underbar{\omega} | \alpha) d\underbar{\omega}}
 \]
 
-\paragraph{Recap}
+\begin{recap}{}{}
 
 \subparagraph{Model}
 
@@ -211,3 +206,5 @@ The posterior distribution turns out to be:
 	\item
 	      Full Bayesian: \(\hat{\underbar{\omega}} = ???\)
 \end{enumerate}
+
+\end{recap}
