--- a/2022-09-30.tex
+++ b/2022-09-30.tex
@@ -19,13 +19,13 @@ Many \emph{MLA}s can be expressed as optimization problem.
 		      \item loss function $L \geq 0$
 		      \item a regularizer $\Omega \geq 0$ which expresses how to discourage complex models.
 	      \end{itemize}
-	\item .
-\end{itemize}
-
+	\item
 \[
 	\min_{f \in \mathcal{F}} \left(\frac{1}{n} \sum_{i=1}^n L\left(f(x^i),\, y^i\right) + \lambda\Omega(f) \right)
 	, \quad \lambda > 0 \text{ is a regularization parameter.}
 \]
+
+\end{itemize}
 
 \subsection{Typical choices for the regularizer} % (fold)
 
@@ -121,6 +121,7 @@ We can set $\frac{1}{2}$ as a hyperparameter.
 \subsection{A gentle introduction to GLMs}
 
 Generalized Linear Models (GLMs) are a class of models that are
+parametrized by a linear combination of features.
 
 Recall:
 
@@ -205,10 +206,3 @@ The last layer of a neural network is a GLM.
 	\end{tabular}
 \end{center}
 
-\paragraph{Procedure to learn a GLM}
-
-\begin{enumerate}
-  \item Identify the kind of variable you want to predict.
-\end{enumerate}
-
-Reference: "An introduction to GLMs" by A. Dobson and Barnett 4th edition
