--- a/2022-09-12.tex
+++ b/2022-09-12.tex
@@ -140,14 +140,14 @@ In most of the cases, randomness is ignorance of the true effects.
 
 \subsection{Discriminative vs generative classifiers}
 
-\begin{definition}{Discriminative classifier}{}
+\begin{definition}{Discriminative classifier}{discriminative}
 	A classifier that directly models the conditional probability
 	\(P(y | x)\) of the output given the input.
 
 	\paragraph{Example:} Logistic regression
 \end{definition}
 
-\begin{definition}{Generative classifier}{}
+\begin{definition}{Generative classifier}{generative}
 	A classifier that models the joint probability distribution
 	\(P(x, y)\) of the input and the output.
 
